<resources>
    <string name="app_name">iWitcher</string>
    <string name="profile_name">Профиль</string>
    <string name="advert_name">Объявления</string>
    <string name="auth_name">Авторизация</string>
    <string name="edit_name">Редактировать профиль</string>
    <string name="menu">Меню</string>
    <string name="edit">Редактировать</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to profile -->
    <string name="your_photo">Ваше фото</string>
    <string name="your_name">Ваше имя</string>
    <string name="role">Роль</string>
    <string name="about_button">О себе</string>
    <string name="advert_story_button">История объявлений</string>
    <string name="comment_button">Комментарии</string>
    <string name="about">Информация Информация Информация Информация Информация Информация</string>
    <string name="comment">Введите свой комментарий</string>
    <string name="table_date">Дата</string>
    <string name="table_header">Заголовок</string>
    <string name="table_status">Статус</string>
    <string name="send_comment">Отправить комментарий</string>

    <!-- Strings related to profile -->
    <string name="witcher_radio">Ведьмак</string>
    <string name="customer_radio">Заказчик</string>
    <string name="about_edit">Расскажите здесь о себе</string>
    <string name="name_edit">Введите здесь ваше имя</string>
    <string name="photo_edit">Нажмите, чтобы загрузить новый аватар</string>
    <string name="save_edit">Сохранить!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to advert list -->
    <string name="sort">Сортировка и фильтры</string>
    <string name="edit_advert">Объявление</string>
    <string name="switch_all_ru_str">Все</string>
    <string name="switch_my_ru_str">Свои</string>

</resources>
