<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="prin366_2018.client.EditProfileActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMain">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_name"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorHeader"/>
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scroll_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/full_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/image_about_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/image"
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/your_photo"
                    android:scaleType="fitCenter"
                    app:srcCompat="@android:drawable/ic_menu_camera" />

                <LinearLayout
                    android:id="@+id/name_role_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                        <AutoCompleteTextView
                            android:id="@+id/text_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:hint="@string/name_edit"
                            android:textSize="18sp"
                            android:inputType="textPersonName" />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/form_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/button_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/about_button"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:background="@drawable/frame_button">
                </TextView>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp">

                    <AutoCompleteTextView
                        android:id="@+id/text_about"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/about_edit"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:padding="5dp"
                        android:layout_margin="3dp"
                        android:inputType="textMultiLine" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <Button
                    android:id="@+id/button_save_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/frame_text_about"
                    android:text="@string/save_edit"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
